@@ -9,6 +9,7 @@ Version 7.0 - not yet released
   - driver for KRT2 radio
 * weather
   - merge all weather data in one dialog
+  - allow showing both terrain and RASP
   - show satellite images from pc_met (Deutscher Wetterdienst)
 * Windows
   - drop support for Windows CE
